--- a/client/client/scripts/navigation/styles.less
+++ b/client/client/scripts/navigation/styles.less
@@ -10,6 +10,7 @@
   .search-container {
     .form-control();
     height: auto;
+    position: relative;
   }
 
   .search-container > input {
@@ -22,7 +23,7 @@
     &:focus {
       border: none;
       -webkit-box-shadow: none;
-      box-shadow: none;
+              box-shadow: none;
     }
   }
 
@@ -47,24 +48,10 @@
     }
   }
 
-  // .invalid-search {
-  // }
-
-  // .remove-search {
-  // }
-
-  // .search-field {
-  // }
-
-  // .search-field input {
-  // }
-
-  // .task-search {
-  // }
-
   .search-dropdown {
-    left: 15px;
-    margin-top: -1px;
+    left: -1px;
+    // right: -1px;
+    margin-top: 0;
     & > li > a {
       padding: (@grid-gutter-width / 10) (@grid-gutter-width / 2);
     }
