chore(forms/validation): adjust style for generated forms
related to CAM-2701

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -19,3 +19,23 @@
   width: 20px;
   height: 20px;
 }
+
+form[name="generatedForm"] {
+  .form-control {
+
+    &.ng-invalid {
+
+      &.ng-dirty {
+        border-color: #a94442;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+
+        &:focus {
+          border-color: #843534;
+          -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+        }
+      }
+    }
+  }  
+}
