--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -144,10 +144,10 @@
       line-height: 20px;
       margin-top: 0;
       outline: none;
-      a {
-        font-size: 14px;
-        display: none;
-      }
+      // a {
+      //   font-size: 14px;
+      //   display: none;
+      // }
     }
   }
 
