chore(layout): toggle variable details layout
switch to widescreen displaying of the variables as soon as task is
minified.

related to #CAM-2997

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -248,7 +248,7 @@ footer.page {
   }
 }
 
-.filters-column-close.task-column-close {
+.task-column-close {
   .variables-list {
     max-height: 20000px;
     .shutter {
