impr(generic form): work on styling
Related to: CAM-3016

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -246,6 +246,7 @@ strong {
 @import "../scripts/process/styles.less";
 @import "../scripts/variable/styles.less";
 @import "../scripts/form/styles.less";
+@import "_forms.less";
 @import "_loader.less";
 @import "_modal.less";
 
