--- a/client/client/scripts/tasklist/styles.less
+++ b/client/client/scripts/tasklist/styles.less
@@ -18,7 +18,7 @@
     height: auto;
     border: none;
     -webkit-box-shadow: none;
-    box-shadow: none;
+            box-shadow: none;
 
     &:focus {
       border: none;
@@ -34,6 +34,7 @@
     margin: 0 0 2px 0;
     border-radius: 3px;
     display: block;
+    vertical-align: middle;
 
 
     &.invalid {
