impr(variables search): display the whole property name and value
Related to: CAM-3025

--- a/client/client/scripts/tasklist/styles.less
+++ b/client/client/scripts/tasklist/styles.less
@@ -47,6 +47,12 @@
       margin-top: -2px;
       margin-bottom: -2px;
     }
+
+    .view-value,
+    .preview {
+      white-space: initial;
+      word-wrap: break-word;
+    }
   }
 
   .search-dropdown {
