impr(layout): add animation to the layout
This commit also removes the browser detection because it is
not needed anymore.

Related to: CAM-3037

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -18,7 +18,6 @@ button.region-toggle {
   margin: 0;
   padding: 0;
 
-  // Bars
   .icon-bar {
     display: block;
     width: 22px;
@@ -55,7 +54,6 @@ footer.page {
   .abs-box(0, 0, 0, 0);
   z-index: 2;
 
-  // comes over the .page-wrap
   > .navbar {
     z-index: 2;
   }
@@ -86,54 +84,23 @@ footer.page {
 
 
 
-.layout(@left-width: 300px, @center-width: 300px) {
+.layout(@left-width: 200px, @center-width: 300px) {
   .columns {
-    > .column {
-      > .cell {
-        position: relative;
-        z-index: 1;
-        position: absolute;
-        top: (22px + @grid-gutter-width);
-        bottom: 0;
-        left: 0;
-        right: 0;
-        padding: (@grid-gutter-width / 2);
-        &.content {
-          overflow-x: hidden;
-          overflow-y: auto;
-        }
-      }
-    }
-
     > .task-filters {
-      left: 0;
-      right: auto;
       width: @left-width;
-      z-index: 3;
     }
 
     > .tasks-list {
       left: @left-width;
-      right: auto;
-      width: @center-width;
-      z-index: 2;
+      right: 100%;
+      margin-right: (0 - (@left-width + @center-width + (@grid-gutter-width * 0)));
     }
 
     > .task-details {
-      width: auto;
       left: (@left-width + @center-width);
-      right: 0;
-      z-index: 3;
-    }
-
-    .cell.top {
-      z-index: 2;
-      top: 0;
-      bottom: auto;
-      height: (22px + @grid-gutter-width);
+      margin-left: 0;
     }
   }
-
 
   .filters-column-close {
     .task-filters {
@@ -142,15 +109,25 @@ footer.page {
 
     .tasks-list {
       left: @grid-gutter-width;
+      margin-right: (0 - (@center-width + (@grid-gutter-width * 1)));
     }
 
     .task-details {
       left: (@center-width + @grid-gutter-width);
     }
 
+    &.task-column-close {
+      .tasks-list {
+        right: 30px;
+        margin: 0;
+      }
+    }
+
     &.list-column-close {
       .tasks-list {
         left: (0 - (@center-width - (@grid-gutter-width * 2)));
+        right: 100%;
+        margin-right: (0 - (@grid-gutter-width * 2));
       }
 
       .task-details {
@@ -162,11 +139,12 @@ footer.page {
 
   .list-column-close {
     .tasks-list {
-      left: (0 - ((@center-width - @left-width) - @grid-gutter-width));
+      left: 0;
+      right: 100%;
+      margin-right: (0 - (@left-width + (@grid-gutter-width * 1)));
     }
 
     .task-details {
-      width: auto;
       left: (@left-width + @grid-gutter-width);
     }
   }
@@ -174,17 +152,36 @@ footer.page {
 
   .task-column-close {
     .tasks-list {
-      width: auto;
       right: @grid-gutter-width;
+      margin: 0;
     }
 
     .task-details {
-      width: @center-width;
       right: (0 - (@center-width - @grid-gutter-width));
-      left: auto;
+      left: 100%;
+      margin-left: (0 - @grid-gutter-width);
     }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -194,7 +191,41 @@ footer.page {
 
 
 .columns {
+  > .column {
+    transition: left 0.218s ease-in-out,
+                right 0.218s ease-in-out,
+                margin-left 0.218s ease-in-out,
+                margin-right 0.218s ease-in-out;
+
+    > .cell {
+      position: relative;
+      z-index: 1;
+      position: absolute;
+      top: (22px + @grid-gutter-width);
+      bottom: 0;
+      left: 0;
+      right: 0;
+      padding: (@grid-gutter-width / 2);
+
+
+      &.content {
+        transition: opacity 2.18s ease-in-out;
+
+        overflow-x: hidden;
+        overflow-y: auto;
+      }
+    }
+  }
+
+  .cell.top {
+    z-index: 2;
+    top: 0;
+    bottom: auto;
+    height: (22px + @grid-gutter-width);
+  }
+
   > .task-filters {
+    z-index: 3;
     background-color: @column-left-bg;
     .cell.top {
       background-color: mix(@brand-primary, @column-left-bg, 8%);
@@ -202,6 +233,7 @@ footer.page {
   }
 
   > .tasks-list {
+    z-index: 2;
     background-color: @column-center-bg;
     .cell.top {
       background-color: mix(@brand-primary, @column-center-bg, 8%);
@@ -209,12 +241,21 @@ footer.page {
   }
 
   > .task-details {
+    z-index: 3;
     background-color: @column-right-bg;
     .cell.top {
       background-color: mix(@brand-primary, @column-right-bg, 8%);
     }
   }
 }
+
+
+
+
+
+
+
+
 
 .filters-column-close {
   .task-filters {
@@ -343,6 +384,19 @@ footer.page {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (min-width: @screen-xs-min) and (max-width: @screen-xs-max) {
   body {
     overflow: auto;
@@ -374,12 +428,12 @@ footer.page {
 
 
 @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-  .layout(120px, 200px);
+  .layout(180px, 300px);
 }
 
 
 @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-  .layout(150px, 340px);
+  .layout(200px, 320px);
 
   .filters-column-close.task-column-close .variables-list .col-lg-6 {
     width: 25%;
@@ -388,7 +442,7 @@ footer.page {
 
 
 @media (min-width: @screen-lg-min) {
-  .layout(200px, 450px);
+  .layout(220px, 360px);
 
   .filters-column-close.task-column-close .variables-list .col-lg-6 {
     width: 20%;
