impr(filters): change style of filter names
Related to: CAM-3042

--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -25,13 +25,10 @@
   h4 {
     cursor: pointer;
     color: @gray-darker;
-    text-transform: uppercase;
     padding-left: (@grid-gutter-width / 2);
     padding-right: (@grid-gutter-width / 2);
     margin-bottom: 7px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-transform: uppercase;
+    word-wrap: break-word;
   }
 
   .counter,
