--- a/client/client/styles/user-styles.css
+++ b/client/client/styles/user-styles.css
@@ -2,16 +2,15 @@
 .navbar .navbar-brand {
   background-image: url(../images/your-app-logo.png);
 }
-.navbar-collapse {
-  background-color: #4960B2;
-}
 
-.navbar-default {
+.navbar-collapse,
+.navbar-default,
+.navbar-right > .divider-vertical,
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:hover,
+.navbar-default .navbar-nav>.open>a:focus {
   background-color: #4960B2;
-}
-
-.navbar-right > .divider-vertical {
-  border-left-color: #4960B2;
-  border-right-color: #4960B2;
+  border-color: #4960B2;
 }
 */
